# pour_water

./: .gitignore  JuliusManager.py  README.md  am-gmm.jconf  command.voca  func_invoker.py  julius-start.cmd  julius-start.sh  pyproject.toml  test_julius.py
